# VideoPlayer

./: CMakeLists.txt  main.cpp
include/: AVPlayer.h  AudioOnlyPlayer.h  VideoPlayer.h
src/: AVPlayer.cpp  AudioOnlyPlayer.cpp  VideoPlayer.cpp  main.cpp
